--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
-
-  <body> 
+  <body style="width:90%; margin:auto; " > 
     <header>
       <ul class="breadcrumb">
         <li class="breadcrumb-item">
-          <a class="text-warning" href="#">/root</a>
+          <a class="text-warning" href="#">~/</a>
         </li>
       </ul>
     </header>
@@ -65,42 +64,41 @@
     
     <main>
 		<div class="row">
-		  <div class="col">
-			  <div class="card" style="width:300px">
-			  	<img class="card-img-top" src="https://www.w3schools.com/bootstrap5/img_avatar1.png" alt="Teaching Image">
-				<div class="card-body">
-			      <span class="badge rounded-pill bg-secondary">Academic</span>
-			      <span class="badge rounded-pill bg-secondary">Computer Science</span>
-				  <h4 class="card-title">Teaching</h4>
-				  <a class="btn btn-success" 
-					  data-bs-toggle="collapse" data-bs-target="#coursesList">Courses</a>
-				  <a href="/teaching/attendances" class="btn btn-secondary"
-					  data-bs-toggle="collapse" data-bs-target="#attendancesList">Attendances</a>
-
-				  <div id="coursesList" class="collapse">
-					  <a>WebDev</a>
-				  </div>
-				  
-				  <div id="attendancesList" class="collapse">
-					  <a target="_blank"
-						  href="https://docs.google.com/spreadsheets/d/1TJDjL-_Iok8DsGY9HTTUsYvI5anUfLIdhqrMmX2n4Dc/edit?usp=sharing">Happy Kittens</a>
-					  <br>
-					  <a href = "https://docs.google.com/spreadsheets/d/14JsEQV5i6SoX4DwZfC3lmabUuClUtDpHZaRVRT1_hNE/edit?usp=sharing"
-						  target="_blank">Junior </a>
-					  <br>
-				      <a href="">Individuals</a>
-				  </div>
+      <div class="col-lg-4 card">
+		  	<img class="card-img-top" src="https://www.w3schools.com/bootstrap5/img_avatar1.png" alt="Teaching Image">
+			  <div class="card-body">
+		      <span class="badge rounded-pill bg-secondary">Academic Level</span>
+		      <span class="badge rounded-pill bg-secondary">Computer Science</span>
+          <span class="badge rounded-pill bg-secondary">Embedded Systems</span>
+			    <h3 class="card-title">Teaching</h4>
+			    <a class="btn btn-success" 
+				    data-bs-toggle="collapse" data-bs-target="#coursesList">Courses</a>
+			    <a href="/teaching/attendances" class="btn btn-secondary"
+				    data-bs-toggle="collapse" data-bs-target="#attendancesList">Attendances</a>
+			    <div id="coursesList" class="collapse">
+				    <a>WebDev</a>
+            <br>
+            <a>GameDev</a>
+            <br>
+            <a>Theorethical CS</a>
 			    </div>
-			  </div>
+			    <div id="attendancesList" class="collapse">
+				    <a target="_blank"
+					    href="https://docs.google.com/spreadsheets/d/0TJDjL-_Iok8DsGY9HTTUsYvI5anUfLIdhqrMmX2n4Dc/edit?usp=sharing">Happy Kittens</a>
+				    <br>
+				    <a href = "https://docs.google.com/spreadsheets/d/13JsEQV5i6SoX4DwZfC3lmabUuClUtDpHZaRVRT1_hNE/edit?usp=sharing"
+					    target="_blank">Junior </a>
+				    <br>
+			      <a href="">Individuals</a>
+			    </div>
 		    </div>
+      </div>
 
-
-		  <div class="col">
-			  <div class="card" style="width:300px">
-			  	<img class="card-img-top" src="https://www.w3schools.com/bootstrap5/img_avatar1.png" alt="Projects Image">
-				<div class="card-body">
-					<span class="badge rounded-pill bg-secondary">Computer Graphics</span>
-			      <span class="badge rounded-pill bg-secondary">Machine Learning</span>
+      <div class="col-lg-4 card"> 
+			  <img class="card-img-top" src="https://www.w3schools.com/bootstrap5/img_avatar1.png" alt="Projects Image">
+			 	<div class="card-body">
+				  <span class="badge rounded-pill bg-secondary">Computer Graphics</span>
+			    <span class="badge rounded-pill bg-secondary">Machine Learning</span>
 				  <h4 class="card-title">Research</h4>
 				  <a class="btn btn-success" 
 					  data-bs-toggle="collapse" data-bs-target="#projectsList">Projects</a>
@@ -111,36 +109,30 @@
 					  <br>
 					  <a href="">open world rpg</a>
 					  <br>
-				      <a href="">price-based clustering</a>
-				</div>
-				</div>
-
-				<div id="papersList" class="collapse">
-					  <!-- <a href="">f(x) graphing</a> -->
-					  <!-- <br> -->
+				    <a href="">price-based clustering</a>
+			    </div>
+				  <div id="papersList" class="collapse">
 					  <a href="">Game Design Documents</a>
 					  <br>
-				      <a href="">TCP/IP socket programming basics</a>
-				</div>
+				    <a href="">TCP/IP socket programming basics</a>
+				  </div>
 			  </div>
+      </div>
 
-			  <div class="col">
-
-		  <div class = "card" style="width:300px">
+		  <div class = "col-lg-4 card">
 			  <img class="card-img-top" src="https://www.w3schools.com/bootstrap5/img_avatar1.png" alt="Portfolio Image">
 			  <div class="card-body">
-				  <span class="badge rounded-pill bg-secondary">Web Development</span>
-				  <span class="badge rounded-pill bg-secondary">Game Development</span>
-				  <span class="badge rounded-pill bg-secondary">Data Science</span>
-				  <h4 class="card-title">Let's work together!</h4>
-				  <a class="btn btn-success"
-					  data-bs-toggle="collapse" data-bs-target="#portfolioList">Portfolio</a>
-				  <a href="/portfolio/clients" class="btn btn-secondary"
-					  data-bs-toggle="collapse" data-bs-target="#feedbackList">Clients</a>
-			  </div>
-	      </div>
-		</div>
-			  </div>
+          <span class="badge rounded-pill bg-secondary">Web Development</span>
+		    	<span class="badge rounded-pill bg-secondary">Game Development</span>
+			    <span class="badge rounded-pill bg-secondary">Data Science</span>
+			    <h4 class="card-title">Let's work together!</h4>
+			    <a class="btn btn-success"
+			      data-bs-toggle="collapse" data-bs-target="#portfolioList">Portfolio</a>
+			    <a href="/portfolio/clients" class="btn btn-secondary"
+			      data-bs-toggle="collapse" data-bs-target="#feedbackList">Clients</a>
+		    </div>
+		  </div>
+	</div>
 	</main>
 
 
